--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Persistent RDP Final (v8 - The Working One)
+name: Persistent RDP Final (v9 - The Real Working One)
 on:
   workflow_dispatch:
 
@@ -40,6 +40,7 @@ jobs:
           if ($env:RCLONE_CONF_CONTENT) {
             Write-Host "RCLONE_CONF found. Writing config and syncing files..."
             $configPath = "$env:APPDATA\rclone\rclone.conf"
+            New-Item -Path (Split-Path $configPath) -ItemType Directory -Force # <-- ئەم دێڕە گرنگە گەڕێنرایەوە
             Set-Content -Path $configPath -Value $env:RCLONE_CONF_CONTENT
             rclone sync "gdrive1:My_RDP_Backup/Desktop" "C:\Users\yusf2000\Desktop" --create-empty-src-dirs --ignore-errors
             rclone sync "gdrive1:My_RDP_Backup/Documents" "C:\Users\yusf2000\Documents" --create-empty-src-dirs --ignore-errors
@@ -78,6 +79,7 @@ jobs:
           if ($env:RCLONE_CONF_CONTENT) {
             Write-Host "RCLONE_CONF found. Writing config and syncing files..."
             $configPath = "$env:APPDATA\rclone\rclone.conf"
+            New-Item -Path (Split-Path $configPath) -ItemType Directory -Force # <-- ئەم دێڕە گرنگە گەڕێنرایەوە
             Set-Content -Path $configPath -Value $env:RCLONE_CONF_CONTENT
             rclone sync "C:\Users\yusf2000\Desktop" "gdrive1:My_RDP_Backup/Desktop" --create-empty-src-dirs --ignore-errors
             rclone sync "C:\Users\yusf2000\Documents" "gdrive1:My_RDP_Backup/Documents" --create-empty-src-dirs --ignore-errors
