--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Persistent RDP Final (v9 - The Real Working One)
+name: Persistent RDP Final (v10 - The Real Real Working One)
 on:
   workflow_dispatch:
 
@@ -40,13 +40,14 @@ jobs:
           if ($env:RCLONE_CONF_CONTENT) {
             Write-Host "RCLONE_CONF found. Writing config and syncing files..."
             $configPath = "$env:APPDATA\rclone\rclone.conf"
-            New-Item -Path (Split-Path $configPath) -ItemType Directory -Force # <-- ئەم دێڕە گرنگە گەڕێنرایەوە
+            New-Item -Path (Split-Path $configPath) -ItemType Directory -Force
             Set-Content -Path $configPath -Value $env:RCLONE_CONF_CONTENT
-            rclone sync "gdrive1:My_RDP_Backup/Desktop" "C:\Users\yusf2000\Desktop" --create-empty-src-dirs --ignore-errors
-            rclone sync "gdrive1:My_RDP_Backup/Documents" "C:\Users\yusf2000\Documents" --create-empty-src-dirs --ignore-errors
+            rclone sync "gdrive1:My_RDP_Backup/Desktop" "C:\Users\yusf2000\Desktop" --create-empty-src-dirs
+            rclone sync "gdrive1:My_RDP_Backup/Documents" "C:\Users\yusf2000\Documents" --create-empty-src-dirs
           } else {
             Write-Host "RCLONE_CONF not found. Skipping download."
           }
+        continue-on-error: true # <-- ئەم دێڕە گرنگە زیاد کرا
 
       - name: Connect to Tailscale
         run: |
@@ -79,10 +80,10 @@ jobs:
           if ($env:RCLONE_CONF_CONTENT) {
             Write-Host "RCLONE_CONF found. Writing config and syncing files..."
             $configPath = "$env:APPDATA\rclone\rclone.conf"
-            New-Item -Path (Split-Path $configPath) -ItemType Directory -Force # <-- ئەم دێڕە گرنگە گەڕێنرایەوە
+            New-Item -Path (Split-Path $configPath) -ItemType Directory -Force
             Set-Content -Path $configPath -Value $env:RCLONE_CONF_CONTENT
-            rclone sync "C:\Users\yusf2000\Desktop" "gdrive1:My_RDP_Backup/Desktop" --create-empty-src-dirs --ignore-errors
-            rclone sync "C:\Users\yusf2000\Documents" "gdrive1:My_RDP_Backup/Documents" --create-empty-src-dirs --ignore-errors
+            rclone sync "C:\Users\yusf2000\Desktop" "gdrive1:My_RDP_Backup/Desktop" --create-empty-src-dirs
+            rclone sync "C:\Users\yusf2000\Documents" "gdrive1:My_RDP_Backup/Documents" --create-empty-src-dirs
           } else {
             Write-Host "RCLONE_CONF not found. Skipping upload."
           }
